Fix styling for schedule dashboard and API - Update API endpoint handling role creation/edits to properly   capitalise the role names.   - The .title() method used in other endpoints have also been swapped     to this new method that is much better. - Update schedule dashboard with improved spacing for the title and role   modal - Update the role list to be scrollable after a certain size to prevent   the other components from being sent to the bottom far off screen.

--- a/src/django/auth_app/static/css/styles.css
+++ b/src/django/auth_app/static/css/styles.css
@@ -464,6 +464,11 @@ table {
     width: 65%;
 }
 
+.scrollable-list {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
 /* Base styles */
 .scroll-container { overflow-x: auto; -ms-overflow-style: none; scrollbar-width: none; }
 .scroll-container::-webkit-scrollbar { display: none; }
